--- a/views/createQuote.pug
+++ b/views/createQuote.pug
@@ -6,6 +6,7 @@ block content
     .create__quote--section
       form.quote__form#create__quote--form
         .create__quote--header Create Quote
-        textarea.create__quote--content
+        textarea.create__quote--content(required)
+        input.author__input(type='text' placeholder='Author' required)
         .create__quote--footer
           input.submit.act(type='submit' value='Create')
