--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -1,9 +1,9 @@
 .footer
   .footer__content
-    h2.aims__title Aims of this Project
+    h3.aims__title Aim of this Application
     p.aims This project was built in other for a user to be able to perform the CRUD Operation, Meaning Creating a new quote, Getting all the available quote for the user, Updating a quote and also Deleting a quote.
   .footer__social--media
-    h2.contact__us Contact Us
+    h3.contact__us Contact
     .i
       a(href='https://wa.me/2349020119024')
         img.whatsapp__icon(src='/img/whatsapp.png')
