--- a/views/createQuote.pug
+++ b/views/createQuote.pug
@@ -8,6 +8,6 @@ block content
         .create__quote--header Create Quote
         textarea.create__quote--content(required)
         input.author__input(type='text' placeholder='Author' required)
-        input.tag__input(type='text' placeholder='TAG => work, success, motivational' required)
+        input.tag__input(type='text' placeholder='TAG => work, success, motivational, in lower case' required)
         .create__quote--footer
           input.submit.act(type='submit' value='Create')
