--- a/views/updatePassword.pug
+++ b/views/updatePassword.pug
@@ -5,9 +5,9 @@ block content
     .dashboard__header--title Update Password
     .profile__section
       .profile__header
-      img.profile__header--image(src='/img/users/toheeb.jpeg')
+      img.profile__header--image(src=`/img/users/${user.photo}` alt=`${user.nickname}`)
       .profile__role
-        .profile__role--quote 10 quotes
+        .profile__role--quote
         .profile__role--template
           //- svg
             use(xlink:href='img/icons.svg#icon-bookmark')
