--- a/views/updatePassword.pug
+++ b/views/updatePassword.pug
@@ -7,7 +7,7 @@ block content
       .profile__header
       img.profile__header--image(src=`/img/users/${user.photo}` alt=`${user.nickname}`)
       .profile__role
-        .profile__role--quote
+        .profile__role--quote= `${user.quote.length} quotes`
         .profile__role--template
           //- svg
             use(xlink:href='img/icons.svg#icon-bookmark')
