--- a/views/base.pug
+++ b/views/base.pug
@@ -18,6 +18,7 @@ html
     
     script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js")
     script(src="/js/alert.js")
+    script(src="/js/formatDate.js")
     script(src="/js/login.js")
     script(src="/js/signup.js")
     script(src="/js/landing.js")
