--- a/views/landing.pug
+++ b/views/landing.pug
@@ -25,6 +25,7 @@ block content
               - const newTime = newDate[4].split(':')
               - const time = date[4].split(':')
               
+              
               if(newDate[2] === date[2])
                 if(newTime[0] === time[0] && newTime[1] === time[1])
                   p= `Today | Just now`
@@ -32,8 +33,8 @@ block content
                   p= `Today | ${newTime[1] - time[1]} Minutes`
                 else
                   p= `Today | ${newTime[0] - time[0]} Hours`
-              else if (newDate[2] > date[2])
-                p= `${newDate[2] - date[2]} months ago | ${date[4]}`
+              else if (date[2] > newDate[2])
+                p= `few months ago | ${date[4]}`
               else
                 p= `${newDate[2] - date[2]} days ago | ${date[4]}`
               .tag__template= quote.tag
